changed table headings
